examples/test/testpolicy7576.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7576
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key46: value1
      key28: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value16
          key17: value15
      podSelector:
        matchLabels:
          key3: value26
          key44: value24
          key43: value49
